# SDL_Engine

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/framework/: framework.cpp  framework.h  gameManager.h  gameObject.cpp  player.cpp  player.h
src/gameManager/: gameManager.h
src/gameObject/: gameObject.cpp  gameObject.h
